--- a/CodeEnter.fxml
+++ b/CodeEnter.fxml
@@ -7,24 +7,24 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="385.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.CodeEnterController">
+<AnchorPane fx:id="anchorPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="500.0" prefWidth="385.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.CodeEnterController">
    <children>
-      <TextField fx:id="enteredCode" alignment="CENTER" layoutX="20.0" layoutY="193.0" prefHeight="56.0" prefWidth="345.0" promptText="Enter a 4 digit code">
+      <TextField fx:id="enteredCode" alignment="CENTER" layoutX="39.0" layoutY="192.0" prefHeight="56.0" prefWidth="345.0" promptText="Enter a 4 digit code">
          <font>
             <Font size="26.0" />
          </font>
       </TextField>
-      <Button fx:id="submitButton" layoutX="101.0" layoutY="291.0" mnemonicParsing="false" onMouseClicked="#submitCode" prefHeight="26.0" prefWidth="183.0" text="Submit Code">
+      <Button fx:id="submitButton" layoutX="113.0" layoutY="291.0" mnemonicParsing="false" onMouseClicked="#submitCode" prefHeight="26.0" prefWidth="183.0" text="Submit Code">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <Text layoutX="20.0" layoutY="185.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter your code" textAlignment="CENTER" wrappingWidth="345.0">
+      <Text layoutX="39.0" layoutY="185.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter your code" textAlignment="CENTER" wrappingWidth="345.0">
          <font>
             <Font name="Eras Medium ITC" size="27.0" />
          </font>
       </Text>
-      <Text layoutX="-25.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MASTERMIND" textAlignment="CENTER" wrappingWidth="435.13671875">
+      <Text layoutX="-13.0" layoutY="92.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MASTERMIND" textAlignment="CENTER" wrappingWidth="435.13671875">
          <font>
             <Font name="Eras Bold ITC" size="50.0" />
          </font>
