--- a/CodeGuess.fxml
+++ b/CodeGuess.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="480.0" prefWidth="385.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.CodeGuessController">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="385.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.CodeGuessController">
    <children>
       <TextField fx:id="guessInput" alignment="CENTER" layoutX="44.0" layoutY="121.0" prefHeight="52.0" prefWidth="308.0" promptText="Enter Your Guess">
          <font>
