--- a/GameLoss.fxml
+++ b/GameLoss.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.*?>
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.text.*?>
@@ -7,16 +8,16 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.GameOverController">
    <children>
-      <ImageView fitHeight="400.0" fitWidth="600.0">
+      <ImageView fitHeight="480.0" fitWidth="600.0">
          <image>
             <Image url="@../../../Pictures/giphy%20(1).gif" />
          </image>
       </ImageView>
-      <Text layoutX="36.0" layoutY="132.0" strokeType="OUTSIDE" strokeWidth="0.0" text="GAME OVER" textAlignment="CENTER" wrappingWidth="527.94921875">
+      <Text layoutX="36.0" layoutY="218.0" strokeType="OUTSIDE" strokeWidth="0.0" text="GAME OVER" textAlignment="CENTER" wrappingWidth="527.94921875">
          <font>
-            <Font name="Eras Bold ITC" size="72.0" />
+            <Font name="Eras Bold ITC" size="82.0" />
          </font>
          <fill>
             <RadialGradient centerX="0.5" centerY="0.49523809523809526" cycleMethod="REFLECT" radius="0.5">
@@ -27,5 +28,10 @@
             </RadialGradient>
          </fill>
       </Text>
+      <Button fx:id="playAgainButton" layoutX="237.0" layoutY="265.0" mnemonicParsing="false" onMouseClicked="#playAgain" prefHeight="34.0" prefWidth="126.0" text="Play again">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
