--- a/GameWin.fxml
+++ b/GameWin.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.*?>
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.text.*?>
@@ -7,14 +8,14 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.GameOverController">
    <children>
-      <ImageView fitHeight="400.0" fitWidth="600.0">
+      <ImageView fitHeight="480.0" fitWidth="600.0">
          <image>
             <Image url="@../../../Pictures/giphy.gif" />
          </image>
       </ImageView>
-      <Text layoutX="53.0" layoutY="231.0" strokeType="OUTSIDE" strokeWidth="0.0" text="YOU WIN!">
+      <Text layoutX="53.0" layoutY="271.0" strokeType="OUTSIDE" strokeWidth="0.0" text="YOU WIN!">
          <font>
             <Font name="Eras Bold ITC" size="96.0" />
          </font>
@@ -27,5 +28,10 @@
             </RadialGradient>
          </fill>
       </Text>
+      <Button fx:id="playAgainButton" layoutX="237.0" layoutY="301.0" mnemonicParsing="false" onMouseClicked="#playAgain" prefHeight="34.0" prefWidth="126.0" text="Play again">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
